# phone-a-friend-rs

./: Cargo.toml  README.md
examples/: hello.rs
src/: error.rs  lib.rs  parse_attrs.rs  telegram.rs
